--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title_localized:
   en: Capsule Hotel in Central Tokyo | Hotel Zen Tokyo
-  ja: hotel koe tokyoと同様のスタイルにしました 
+  ja: hotel koe tokyoと同様のスタイルにしました
 meta_description_localized:
   en: Hotel Zen Tokyo's guest experience is crafted with the spirit of Japanese zen minimalism in mind. Experience authentic traditional design in the heart of Tokyo.
   ja: Hotel Zen Tokyoは「泊まれる茶室」ー各部屋を千利休の茶室にみたてた新しい形のカプセルホテルです。Hotel Zen Tokyoはただ寝るだけのカプセル体験ではなく、ミニマルに日本の文化を体験できる、まるで都会の旅館のような体験を提供します。
@@ -108,7 +108,7 @@ meta_tags:
 <!--Room Location intro here -->
 <section class="twocol">
   <div class="twocol-row">
-    <div class="image bg-bottom m-hide" style="background-image: url('/assets/images/room2.jpg');"></div>
+    <div class="image bg-bottom m-hide" style="background-image: url('{{ pageimages[0].home_about[3].url_medium }}');"></div>
     <div class="content">
       <div class="content-wrap">
         {% regionblock room_title_subtitle, type:header %}
