--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -20,7 +20,7 @@ meta_tags:
  {% assign lang_url = "/ja" %}
 {% endif %}
 <!-- Gallery page banner -->
-<section class="inner-banner text-center bg-cover" style="background-image:url('//cdn.traveltripper.io/site-assets/32_913_18984/media/2018-09-20-031714/large_home-banner-3.jpg');">
+<section class="inner-banner text-center bg-cover" style="background-image:url('/assets/images/gallery/gallery-hero.jpg');">
   <div class="inner-banner-content">
     {% regionblock rooms_banner_heading, type:header %}
       <h1 tabindex="0">{% t 'gallery_title' %}</h1>
