--- a/index.html
+++ b/index.html
@@ -91,15 +91,14 @@ meta_tags:
     <div id="about-carousel" class="carousel slide mobile-carousel" data-ride="carousel">
       <div class="indicators-control">
         <ol class="carousel-indicators">
-          {% for pageimage in pageimages[0].home_about | limit: 3 %}
+          {% for pageimage in pageimages[0].home_about | limit: 2 %}
             <li data-target="#about-carousel" data-slide-to="{{ forloop.index0 }}" {% if forloop.first %}class="active"{% endif %}></li>
           {% endfor %}
         </ol>
       </div>
       <div class="carousel-inner" role="tablist">
-        {% for pageimage in pageimages[0].home_about | limit: 3 %}
-        <div class="carousel-item bg-cover {% if forloop.first %}active{% endif %}" role="option" style="background-image: url('{{ pageimage.url_medium }}');"></div>
-        {% endfor %}
+        <div class="carousel-item bg-cover active" role="option" style="background-image: url('{{ pageimages[0].home_about[0].url_medium }}');"></div>
+        <div class="carousel-item bg-cover" role="option" style="background-image: url('{{ pageimages[0].home_about[2].url_medium }}');"></div>
       </div>
     </div>
   </div>
@@ -108,7 +107,7 @@ meta_tags:
 <!--Room Location intro here -->
 <section class="twocol">
   <div class="twocol-row">
-    <div class="image bg-bottom m-hide" style="background-image: url('{{ pageimages[0].home_about[2].url_medium }}');"></div>
+    <div class="image bg-bottom m-hide" style="background-image: url('{{ pageimages[0].home_about[3].url_medium }}');"></div>
     <div class="content">
       <div class="content-wrap">
         {% regionblock room_title_subtitle, type:header %}
@@ -129,7 +128,7 @@ meta_tags:
     </div>
   </div>
   <div class="twocol-row">
-    <div class="image bg-bottom" style="background-image: url('/assets/images/location.jpg');"></div>
+    <div class="image bg-bottom" style="background-image: url('/assets/images/location-2.jpg');"></div>
     <div class="content">
       <div class="content-wrap">
         {% regionblock location_title_subtitle, type:header %}
