--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ meta_tags:
       <img src="//cdn.traveltripper.io/site-assets/32_913_20746/media/2018-10-30-080919/medium_New_Premium_Room_L_1030.jpg" class="objectfit">
     {% endregionblock %}
   </div>
+
   <!-- Carousel for Mobile  -->
   <div id="about-carousel" class="carousel slide mobile-carousel" data-ride="carousel">
       <div class="indicators-control">
@@ -99,7 +100,11 @@ meta_tags:
 <!--Room Location intro here -->
 <section class="twocol">
   <div class="twocol-row">
-    <div class="image bg-bottom m-hide" style="background-image: url('{{ pageimages[0].home_about[2].url_medium }}');"></div>
+    <div class="image image--objectwrap m-hide">
+      {% regionblock home_room_image, type:image %}
+        <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-121143/medium_Photo__3.jpg" class="objectfit">
+      {% endregionblock %}
+    </div>
     <div class="content">
       <div class="content-wrap">
         {% regionblock room_title_subtitle, type:header %}
@@ -120,7 +125,11 @@ meta_tags:
     </div>
   </div>
   <div class="twocol-row">
-    <div class="image bg-bottom" style="background-image: url('/assets/images/location-2.jpg');"></div>
+    <div class="image image--align-center">
+      {% regionblock home_location_image, type:image %}
+        <img src="/assets/images/location-2.jpg" class="objectfit">
+      {% endregionblock %}
+    </div>
     <div class="content">
       <div class="content-wrap">
         {% regionblock location_title_subtitle, type:header %}
@@ -143,45 +152,46 @@ meta_tags:
 </section>
 
 <!--Dining content here -->
-<section class="twocol">
-  <div class="twocol-row">
-
-    <!-- Carousel for Mobile  -->
-    <div id="dining-carousel" class="carousel slide mobile-carousel" data-ride="carousel">
-      <div class="indicators-control">
-        <ol class="carousel-indicators">
-          {% for pageimage in pageimages[0].home_dining | limit: 2 %}
-            <li data-target="#dining-carousel" data-slide-to="{{ forloop.index0 }}" {% if forloop.first %}class="active"{% endif %}></li>
-          {% endfor %}
-        </ol>
-      </div>
-      <div class="carousel-inner" role="tablist">
+<section class="content-grid-home large-image-left">
+  <!-- Carousel for Mobile  -->
+  <div id="dining-carousel" class="carousel slide mobile-carousel" data-ride="carousel">
+    <div class="indicators-control">
+      <ol class="carousel-indicators">
         {% for pageimage in pageimages[0].home_dining | limit: 2 %}
-        <div class="carousel-item bg-cover {% if forloop.first %}active{% endif %}" role="option" style="background-image: url('{{ pageimage.url_medium }}');"></div>
+          <li data-target="#dining-carousel" data-slide-to="{{ forloop.index0 }}" {% if forloop.first %}class="active"{% endif %}></li>
         {% endfor %}
-      </div>
+      </ol>
     </div>
+    <div class="carousel-inner" role="tablist">
+      {% for pageimage in pageimages[0].home_dining | limit: 2 %}
+      <div class="carousel-item bg-cover {% if forloop.first %}active{% endif %}" role="option" style="background-image: url('{{ pageimage.url_medium }}');"></div>
+      {% endfor %}
+    </div>
+  </div>
 
-    <!-- Can be hidden in mobile -->
-    <div class="image bg-bottom m-hide" style="background-image: url('{{ pageimages[0].home_dining[0].url_medium }}');"></div>
 
-    <div class="content">
-
-      <!-- Can be hidden in mobile -->
-      <div class="image-wrap bg-center m-hide" style="background-image: url('{{ pageimages[0].home_dining[1].url_medium }}');"></div>
-
-      <div class="content-wrap">
+  <div class="content-grid-home__content">
+    <div class="content-wrap">
         {% regionblock cafe_title_subtitle, type:header %}
-         <h4 tabindex="0">Food & Live Music at Downstairs Bar / Cafe</h4>
+          <h4 tabindex="0">Food & Live Music at Downstairs Bar / Cafe</h4>
         {% endregionblock %}
         {% regionblock cafe_title, type:header %}
-         <h2 tabindex="0">Showcases by local artists</h2>
+          <h2 tabindex="0">Showcases by local artists</h2>
         {% endregionblock %}
         {% regionblock cafe_detail, type:html %}
-         <p tabindex="0">The Hotel Zen Tokyo experience includes our basement cafe "NAME," which serves as a gateway to Japanese culture, art and music. During the day, take advantage of the cafe library to read up on Japan and view the rotating, pop-up exhibits of arts and crafts. Enjoy live, traditionally inspired Japanese music while sipping on sake in the evening.</p>
+          <p tabindex="0">The Hotel Zen Tokyo experience includes our basement cafe "NAME," which serves as a gateway to Japanese culture, art and music. During the day, take advantage of the cafe library to read up on Japan and view the rotating, pop-up exhibits of arts and crafts. Enjoy live, traditionally inspired Japanese music while sipping on sake in the evening.</p>
         {% endregionblock %}
-      </div>
     </div>
+  </div>
+  <div class="content-grid-home__image--large m-hide">
+    {% regionblock about_hotel_image_large, type:image %}
+      <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-125753/medium_Photo__5.jpg" class="objectfit">
+    {% endregionblock %}
+  </div>
+  <div class="content-grid-home__image--small m-hide">
+    {% regionblock about_hotel_image_large, type:image %}
+      <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-125816/medium_Photo__6.jpg" class="objectfit">
+    {% endregionblock %}
   </div>
 </section>
 
