--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ meta_tags:
     {% endregionblock %}
   </div>
   <div class="content-grid-home__image--small m-hide">
-    {% regionblock about_hotel_image_large, type:image %}
+    {% regionblock about_hotel_image_small, type:image %}
       <img src="//cdn.traveltripper.io/site-assets/32_913_20746/media/2018-10-30-080919/medium_New_Premium_Room_L_1030.jpg" class="objectfit">
     {% endregionblock %}
   </div>
@@ -184,12 +184,12 @@ meta_tags:
     </div>
   </div>
   <div class="content-grid-home__image--large m-hide">
-    {% regionblock about_hotel_image_large, type:image %}
+    {% regionblock dining_image_large, type:image %}
       <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-125753/medium_Photo__5.jpg" class="objectfit">
     {% endregionblock %}
   </div>
   <div class="content-grid-home__image--small m-hide">
-    {% regionblock about_hotel_image_large, type:image %}
+    {% regionblock dining_image_small, type:image %}
       <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-125816/medium_Photo__6.jpg" class="objectfit">
     {% endregionblock %}
   </div>
