--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@ meta_tags:
   </div>
   <div class="content-grid-home__image--large m-hide">
     {% regionblock about_hotel_image_large, type:image %}
-      <img src="//cdn.traveltripper.io/site-assets/32_913_20406/media/2018-10-29-073924/medium_%E6%96%B0%E5%A4%96%E8%A3%85Atorimu.jpg" class="objectfit">
+      <img src="//cdn.traveltripper.io/site-assets/32_913_20406/media/2018-10-29-073924/medium_%E6%96%B0%E5%A4%96%E8%A3%85Atorimu.jpg">
     {% endregionblock %}
   </div>
   <div class="content-grid-home__image--small m-hide">
     {% regionblock about_hotel_image_small, type:image %}
-      <img src="//cdn.traveltripper.io/site-assets/32_913_20746/media/2018-10-30-080919/medium_New_Premium_Room_L_1030.jpg" class="objectfit">
+      <img src="//cdn.traveltripper.io/site-assets/32_913_20746/media/2018-10-30-080919/medium_New_Premium_Room_L_1030.jpg">
     {% endregionblock %}
   </div>
 
@@ -102,7 +102,7 @@ meta_tags:
   <div class="twocol-row">
     <div class="image image--objectwrap m-hide">
       {% regionblock home_room_image, type:image %}
-        <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-121143/medium_Photo__3.jpg" class="objectfit">
+        <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-121143/medium_Photo__3.jpg">
       {% endregionblock %}
     </div>
     <div class="content">
@@ -127,7 +127,7 @@ meta_tags:
   <div class="twocol-row">
     <div class="image image--align-center">
       {% regionblock home_location_image, type:image %}
-        <img src="/assets/images/location-2.jpg" class="objectfit">
+        <img src="/assets/images/location-2.jpg">
       {% endregionblock %}
     </div>
     <div class="content">
@@ -185,12 +185,12 @@ meta_tags:
   </div>
   <div class="content-grid-home__image--large m-hide">
     {% regionblock dining_image_large, type:image %}
-      <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-125753/medium_Photo__5.jpg" class="objectfit">
+      <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-125753/medium_Photo__5.jpg">
     {% endregionblock %}
   </div>
   <div class="content-grid-home__image--small m-hide">
     {% regionblock dining_image_small, type:image %}
-      <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-125816/medium_Photo__6.jpg" class="objectfit">
+      <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-125816/medium_Photo__6.jpg">
     {% endregionblock %}
   </div>
 </section>
