--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ meta_tags:
       </ol>
     </div>
     <div class="carousel-inner" role="tablist">
-      <div class="carousel-item bg-cover active" role="option" style="background-image: url('{{ site.data.regions.en.index.dining_image_large.content.url_medium }}');"></div>
-      <div class="carousel-item bg-cover" role="option" style="background-image: url('{{ site.data.regions.en.index.dining_image_small.content.url_medium }}');"></div>
+      <div class="carousel-item bg-cover active" role="option" style="background-image: url('{{ site.data._regions.en.index.dining_image_large[0].content.url_medium }}');"></div>
+      <div class="carousel-item bg-cover" role="option" style="background-image: url('{{ site.data._regions.en.index.dining_image_small[0].content.url_medium }}');"></div>
     </div>
   </div>
 
