--- a/_pages/location.html
+++ b/_pages/location.html
@@ -72,15 +72,17 @@ meta_tags:
   <div id="location-carousel" class="carousel slide mobile-carousel" data-ride="carousel">
     <div class="indicators-control">
       <ol class="carousel-indicators">
-        {% for pageimage in pageimages[0].location | limit: 4 %}
-          <li data-target="#location-carousel" data-slide-to="{{ forloop.index0 }}" {% if forloop.first %}class="active"{% endif %}></li>
-        {% endfor %}
+        <li data-target="#location-carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#location-carousel" data-slide-to="1" class="active"></li>
+        <li data-target="#location-carousel" data-slide-to="2" class="active"></li>
+        <li data-target="#location-carousel" data-slide-to="3" class="active"></li>
       </ol>
     </div>
     <div class="carousel-inner" role="tablist">
-      {% for pageimage in pageimages[0].location | limit: 4 %}
-      <div class="carousel-item bg-cover {% if forloop.first %}active{% endif %}" role="option" style="background-image: url('{{ pageimage.url_medium }}');"></div>
-      {% endfor %}
+      <div class="carousel-item bg-cover active" role="option" style="background-image: url('{{ site.data._regions.en.index.location_image_one[0].content.url_medium }}');"></div>
+      <div class="carousel-item bg-cover active" role="option" style="background-image: url('{{ site.data._regions.en.index.location_image_two[0].content.url_medium }}');"></div>
+      <div class="carousel-item bg-cover active" role="option" style="background-image: url('{{ site.data._regions.en.index.location_image_three[0].content.url_medium }}');"></div>
+      <div class="carousel-item bg-cover active" role="option" style="background-image: url('{{ site.data._regions.en.index.location_image_four[0].content.url_medium }}');"></div>
     </div>
   </div>
 </section>
