remove active states

--- a/_pages/location.html
+++ b/_pages/location.html
@@ -80,9 +80,9 @@ meta_tags:
     </div>
     <div class="carousel-inner" role="tablist">
       <div class="carousel-item bg-cover active" role="option" style="background-image: url('{{ site.data._regions.en.index.location_image_one[0].content.url_medium }}');"></div>
-      <div class="carousel-item bg-cover active" role="option" style="background-image: url('{{ site.data._regions.en.index.location_image_two[0].content.url_medium }}');"></div>
-      <div class="carousel-item bg-cover active" role="option" style="background-image: url('{{ site.data._regions.en.index.location_image_three[0].content.url_medium }}');"></div>
-      <div class="carousel-item bg-cover active" role="option" style="background-image: url('{{ site.data._regions.en.index.location_image_four[0].content.url_medium }}');"></div>
+      <div class="carousel-item bg-cover" role="option" style="background-image: url('{{ site.data._regions.en.index.location_image_two[0].content.url_medium }}');"></div>
+      <div class="carousel-item bg-cover" role="option" style="background-image: url('{{ site.data._regions.en.index.location_image_three[0].content.url_medium }}');"></div>
+      <div class="carousel-item bg-cover" role="option" style="background-image: url('{{ site.data._regions.en.index.location_image_four[0].content.url_medium }}');"></div>
     </div>
   </div>
 </section>
