--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -20,7 +20,10 @@ meta_tags:
  {% assign lang_url = "/ja" %}
 {% endif %}
 <!-- Gallery page banner -->
-<section class="inner-banner text-center bg-cover" style="background-image:url('/assets/images/gallery/gallery-hero.jpg');">
+<section class="inner-banner text-center bg-cover banner--editable" style="background-image: url({{ site.data._regions.en._pages.gallery.gallery_banner[0].content.url_large }}">
+  {% regionblock gallery_banner, type:image %}
+    <img src="/assets/images/gallery/gallery-hero.jpg">
+  {% endregionblock %}
   <div class="inner-banner-content">
     {% regionblock rooms_banner_heading, type:header %}
       <h1 tabindex="0">{% t 'gallery_title' %}</h1>
