--- a/_pages/location.html
+++ b/_pages/location.html
@@ -20,9 +20,9 @@ meta_tags:
  {% assign lang_url = "/ja" %}
 {% endif %}
 <!-- Location page banner -->
-<section class="banner-fullscreen" style="background-image: url({{ site.data._regions.en._pages.location.location_banner[0].content.url_medium }});">
+<section class="banner-fullscreen banner--editable" style="background-image: url({{ site.data._regions.en._pages.location.location_banner[0].content.url_large }}">
   {% regionblock location_banner, type:image %}
-    <img src="/assets/images/location/mifune.jpg" class="invisible">
+    <img src="/assets/images/location/mifune.jpg">
   {% endregionblock %}
   <div class="wrapper">
     {% regionblock location_title, type:header %}
