--- a/_pages/offers.html
+++ b/_pages/offers.html
@@ -19,7 +19,7 @@ meta_tags:
 <!-- Offers Banner -->
 <section class="page-banner text-center">
   {% regionblock banner, type:image %}
-    <img src="/assets/images/offers/offers-banner.jpg">
+    <img src="/assets/images/offers/offers-banner.jpg" alt="Special Offers">
   {% endregionblock %}
   <div class="inner-banner-content">
     {% regionblock banner_heading, type:header %}
