prefix grid for ie11, add objectfit polyfil

--- a/_pages/location.html
+++ b/_pages/location.html
@@ -50,22 +50,22 @@ meta_tags:
       {% endregionblock %}
     </div>
   </div>
-  <div class="content-grid-location__image content-grid-location__image--1 m-hide">
+  <div class="content-grid-location__image content-grid-location__image--1 image--objectwrap m-hide">
     {% regionblock location_image_one, type:image %}
       <img src="/assets/images/location/mifune.jpg" class="objectfit">
     {% endregionblock %}
   </div>
-  <div class="content-grid-location__image content-grid-location__image--2 m-hide">
+  <div class="content-grid-location__image content-grid-location__image--2 image--objectwrap m-hide">
     {% regionblock location_image_two, type:image %}
       <img src="/assets/images/location/loc-pic-2.jpg" class="objectfit" alt="Ningyocho neighborhood">
     {% endregionblock %}
   </div>
-  <div class="content-grid-location__image content-grid-location__image--3 m-hide">
+  <div class="content-grid-location__image content-grid-location__image--3 image--objectwrap m-hide">
     {% regionblock location_image_three, type:image %}
       <img src="/assets/images/location/loc-pic-3.jpg" class="objectfit" alt="Ningyocho neighborhood">
     {% endregionblock %}
   </div>
-  <div class="content-grid-location__image content-grid-location__image--4 m-hide">
+  <div class="content-grid-location__image content-grid-location__image--4 image--objectwrap m-hide">
     {% regionblock location_image_four, type:image %}
       <img src="/assets/images/location/loc-pic-4.jpg" class="objectfit" alt="Ningyocho neighborhood">
     {% endregionblock %}
