--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@ meta_tags:
         {% endregionblock %}
       </div>
   </div>
-  <div class="content-grid-home__image--large m-hide">
+  <div class="content-grid-home__image--large image--objectwrap m-hide">
     {% regionblock about_hotel_image_large, type:image %}
       <img src="//cdn.traveltripper.io/site-assets/32_913_20406/media/2018-10-29-073924/medium_%E6%96%B0%E5%A4%96%E8%A3%85Atorimu.jpg">
     {% endregionblock %}
   </div>
-  <div class="content-grid-home__image--small m-hide">
+  <div class="content-grid-home__image--small image--objectwrap m-hide">
     {% regionblock about_hotel_image_small, type:image %}
       <img src="//cdn.traveltripper.io/site-assets/32_913_20746/media/2018-10-30-080919/medium_New_Premium_Room_L_1030.jpg">
     {% endregionblock %}
@@ -166,12 +166,12 @@ meta_tags:
       {% endregionblock %}
     </div>
   </div>
-  <div class="content-grid-home__image--large m-hide">
+  <div class="content-grid-home__image--large m-hide image--objectwrap">
     {% regionblock dining_image_large, type:image %}
       <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-125753/medium_Photo__5.jpg">
     {% endregionblock %}
   </div>
-  <div class="content-grid-home__image--small m-hide">
+  <div class="content-grid-home__image--small m-hide image--objectwrap">
     {% regionblock dining_image_small, type:image %}
       <img src="//cdn.traveltripper.io/site-assets/32_913_20892/media/2018-11-05-125816/medium_Photo__6.jpg">
     {% endregionblock %}
