rfp page development done

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -26,7 +26,7 @@ meta_tags:
 </section>
 
 <!-- Contact Form -->
-<section class="contact-form">
+<section class="form-container">
   {% regionblock page_subtitle, type:header %}
    <h2 tabindex="0">{% t 'at_your_service' %}</h2>
   {% endregionblock %}
